css fixes (overflow textarea/borders release page)

--- a/app/assets/stylesheets/modules/boxes/cover-box.scss
+++ b/app/assets/stylesheets/modules/boxes/cover-box.scss
@@ -132,7 +132,7 @@
   .content {
     padding: ($baseLineHeight / 2 - 1) ($gridColumnWidth / 2);
     font-size: 13px;
-    overflow: auto;
+    overflow-x: hidden; 
     position: relative;
   }
   
