--- a/app/assets/stylesheets/modules/boxes/release-page.scss
+++ b/app/assets/stylesheets/modules/boxes/release-page.scss
@@ -8,6 +8,7 @@
 .release-cover {
   @include box-shadow(rgba(black, 0.3) 0 1px 2px);
   border: 1px solid #2d2d2d;
+  width: 100%;
   @include border-radius(3px);
 
   img {
@@ -56,6 +57,7 @@
 }
 
 .page-public-release .release-content {
+  border: none;
   float:right;
   width:729px;
   margin:20px 0;
